# uchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  chat_database.db
client/: CMakeLists.txt  Makefile  test_client_async.c
client/inc/: client.h  db.h  encryption.h  page_selector.h  signals.h  wrapper_libuv.h
client/include/: client.h
client/resources/: local.db  new_countries.txt
client/resources/framework/cairo/: cairo-gobject.h  cairo-script-interpreter.h
client/resources/framework/cmc/utl/: futils.h  log.h  mutex.h  thread.h
client/resources/framework/include/cairo/: cairo-deprecated.h  cairo-ft.h  cairo-gobject.h  cairo-pdf.h  cairo-ps.h  cairo-quartz-image.h  cairo-quartz.h  cairo-script-interpreter.h  cairo-script.h  cairo-svg.h  cairo-tee.h  cairo.h
client/resources/framework/include/fribidi/: fribidi-bidi-types-list.h  fribidi-bidi-types.h  fribidi-bidi.h  fribidi-char-sets-list.h  fribidi-char-sets.h  fribidi-common.h  fribidi-deprecated.h  fribidi-flags.h  fribidi-joining-types-list.h  fribidi-joining-types.h  fribidi-joining.h  fribidi-shape.h  fribidi-types.h  fribidi-unicode.h  fribidi.h
client/resources/framework/include/gettext/: libintl.h  textstyle.h
client/resources/framework/include/harfbuzz/: hb-aat-layout.h  hb-aat.h  hb-blob.h  hb-buffer.h  hb-common.h  (+32 more)
client/resources/framework/libsoundio/: libsoundio.2.0.0.dylib  libsoundio.2.dylib  libsoundio.dylib
client/resources/framework/macros.h/: macros.h
client/resources/glade/: chat_page.glade  chat_row_class.glade  login_page.glade  login_page_2.glade  main_page.glade  register_page.glade  register_page_2.glade  test.glade  test_all_window.glade
client/resources/glade/10-21-2020/: style.css  uchat.glade
client/resources/glade/new_ui/: active_chats_class.glade  backup_uchat.glade  backup_uchat_2.glade  c_msg_widget_class.glade  friend_widget_class.glade  p_msg_widget_class.glade  style.css  uchat.glade
client/src/: main.c
client/src/db/: fill_countries.c  get_country.c  init_database.c  make_sql_request.c
client/src/encryption/: ssem.c
client/src/json/: create_msg_json.c  json_get_int.c  json_get_str.c  send_json.c
client/src/main/: main.c  new_main.c
client/src/pages/: login_pages.c  page_selector.c
client/src/signals/login_wnd/: login_wnd_main_signals.c
client/src/socket/: get_response.c  send_request.c
client/src/utils/: chat_widget_factory.c  create_user_data.c  create_widget_from_template.c  create_window.c  download_curl.c  event_widget_factory.c  g_list_get_widget.c  get_widget.c  msg_widget_factory.c  prepare_signup_page.c  read_socket.c  user_data_methods.c
client/src/utils/ wrapper_libuv/: wrapper_libuv.c  write_to_server.c
db_dev/: CMakeLists.txt
db_dev/client/inc/: sophia_client.h
db_dev/client/src/: sophia.c  sophia_add.c  sophia_get.c
db_dev/inc/: header_db_dev.h
db_dev/src/: add_chat_to_db.c  add_user_to_db.c  if_user_in_bd.c  init_database.c  main.c  mx_itoa.c
db_dev/src/additional/: print_user_info.c
db_dev/src/additional/lib/: mx_del_strarr.c  mx_itoa.c  mx_strnew.c
db_dev/src/additional/sql/: decoding_enum.c  print_chat_info.c
db_dev/src/sqlite3_lib/: add_chat_to_db.c  add_user_to_db.c  get_chats_where_user.c  if_user_in_bd.c  init_database.c  populate_User_struct.c  update_nickname_of_user.c  user_in_bd.c
db_dev/src/sqlite3_lib/create/: add_chat_to_db.c  add_message_to_db.c  add_user_in_chat.c
db_dev/src/sqlite3_lib/delete/: delete_chat_from_db.c  delete_user.c
db_dev/src/sqlite3_lib/initialization/: init_database.c
db_dev/src/sqlite3_lib/insert/: get_all_messages_from_chat.c  get_chats_where_user.c  mx_del_chat_list.c  mx_pop_back_for_chat.c  populate_User_struct.c  user_in_bd.c
db_dev/src/sqlite3_lib/read/: add_id_to_struct_Message.c  get_all_messages_from_chat.c  get_number_of_users_in_chat.c  is_admin.c  messages_from_id.c
db_dev/src/sqlite3_lib/request/: make_request.c
db_dev/src/sqlite3_lib/update/: make_request_for_null.c  update_age_of_user.c  update_email_of_user.c  update_fullname_of_user.c  update_nickname_of_user.c  update_password_of_user.c  update_phone_number_of_user.c  update_photo_of_user.c
server/: CMakeLists.txt  Makefile  README.md  chat_database.db  cli_test.c  client_test.c  uchat
server/inc/: header_db_dev.h  server.h
server/include/: server.h
server/src/: net_skeleton.c
server/src/db/: add_chat_to_db.c  add_user_to_db.c  get_chats_where_user.c  if_user_in_bd.c  init_database.c  mx_itoa.c  populate_user_struct.c
server/src/db/create/: add_chat_to_db.c  add_message_to_db.c  add_user_in_chat.c  add_user_to_db.c  init_database.c
server/src/db/delete/: delete_chat_from_db.c  delete_user.c  drop_all.c
server/src/db/initialization/: init_chat_struct.c  init_database.c  init_message_struct.c  init_user_struct.c
server/src/db/insert/: add_id_struct_Message.c  add_id_to_struct_Chat.c  add_id_to_struct_Message.c  add_id_to_struct_User.c  check_valid_data_for_sign_up.c  get_all_messages_from_chat.c  get_chats_where_user.c  get_users_list_for_chat.c  init_chat_struct.c  init_message_struct.c  populate_User_struct.c  user_in_bd.c
server/src/db/read/: add_id_to_struct_Message.c  check_valid_data_for_sign_up.c  get_all_messages_from_chat.c  get_chat_by_id.c  get_chats_where_user.c  get_id_by_nickname.c  get_users_list_for_chat.c  is_admin.c  messages_from_id.c  populate_User_struct.c  user_in_bd.c
server/src/db/request/: make_request.c
server/src/db/update/: update_email_of_user.c  update_nickname_of_user.c
server/src/json/: check_route.c  mx_new_json.c  test.json
server/src/main/: main.c  net_skeleton.c  new_main.c  old_main.c  test.json  try_multytreads.c
server/src/router/: check_route.c  sign_in.c  sign_up.c
server/src/router/auth/: send_errors.c  send_json_to.c  send_status.c  sign_in.c  sign_up.c
server/src/router/chats/: check_for_updates.c  create_new_empty_chat.c  free_chat_struct.c  new_chat_pack_send.c  open_selected_chat.c
server/src/router/messages/: create_new_chat.c  create_new_empty_chat.c  create_new_message.c  message_pack_send.c  open_selected_chat.c
(+914 files in other folders)
